Sat Oct  8 12:10:13 EEST 2011 (edwin)
-------------------------------------
 * libclamav/bytecode.c,bytecode_api.c: fix recursion level crash (bb #3706).

Mon Sep 19 13:44:36 CEST 2011 (tk)
----------------------------------
 * freshclam: re-enable short-time blacklisting of mirrors on
	      connection errors

Fri Sep 16 16:17:52 CEST 2011 (tk)
----------------------------------
 * freshclam: disable load balancing in further download attempts

Fri Sep 16 12:47:10 CEST 2011 (acab)
------------------------------------
 * libclamav: properly pass custom flag to sigload_cb
 * c4w: honor custom sigs in mindefs
   (bb#3509 + bb#3510)

Thu Sep 15 14:44:11 CEST 2011 (tk)
----------------------------------
 * freshclam: fix pidfile removal (bb#3499)

Mon Sep 12 16:29:22 CEST 2011 (tk)
----------------------------------
 * freshclam: add new option PrivateMirror (bb#3058)

Sun Aug 21 17:05:24 EEST 2011 (edwin)
-------------------------------------
 * libclamav/pdf.c:  fix incorrect blocking of some encrypted PDF with empty user passwords. (bb #3364)

Mon Aug  8 11:32:31 CEST 2011 (tk)
----------------------------------
 * freshclam: add new option --update-db

Wed Aug  3 15:41:28 CEST 2011 (tk)
----------------------------------
 * sigtool/sigtool.c: fix calculation of max signature length

Tue Aug  2 17:03:33 CEST 2011 (tk)
----------------------------------
 * docs: clarify behavior of --scan-*/Scan* options (bb#3134)

Mon Jul 25 16:09:19 EEST 2011 (edwin)
-------------------------------------
 * libclamav/bytecode_vm.c: fix opcode 20 error (bb #3100)

Mon Jul 25 14:33:59 CEST 2011 (acab)
------------------------------------
 * libclamav/matcher-hash.c: off by one read in cli_hm_scan (bb#2818)

Tue Jul 19 18:30:53 CEST 2011 (acab)
------------------------------------
 * libclamav/autoit.c: avoid dumping uninit data on autoit failure (bb#3051)

Thu Jul 14 12:29:17 EEST 2011 (edwin)
------------------------------------